FILE(GLOB_RECURSE LIBWORMUX_SRCS *.cpp)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${SDL_INCLUDE_DIR}
	${PROJECT_SOURCE_DIR}/src
  ${PROJECT_SOURCE_DIR}/lib/fixedpoint
)

ADD_LIBRARY(libwarmux STATIC ${LIBWORMUX_SRCS})
# change the prefix, so we don't end up with liblibwarmux
SET_TARGET_PROPERTIES(libwarmux PROPERTIES PREFIX "")
